Update Permutations.java